--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,29 @@
-version: "3.0"
+version: "3.8"
+
+networks:
+  application:
+    driver: bridge
 
 services:
+  db:
+    image: mysql:latest
+    ports:
+      - 3306:3306
+    volumes:
+      - mysql-data:/var/lib/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: run/secrets/db_password
+      MYSQL_DATABASE: where_qr
+    networks:
+      - application
+    healthcheck:
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+      timeout: 20s
+      retries: 10
+    secrets:
+      - db_password
+
+
   app:
     container_name: app
     image: whereqr:v1
@@ -8,3 +31,15 @@ services:
     ports:
       - 8080:8080
     restart: always
+    networks:
+      - application
+    depends_on:
+      db:
+        condition: service_healthy
+
+volumes:
+  mysql-data:
+
+secrets:
+  db_password:
+    file: db_password.txt
