--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ dependencies {
 	implementation 'com.google.zxing:core:3.5.0'
 	implementation 'com.google.zxing:javase:3.5.0'
 
+	//base64
+	implementation 'commons-io:commons-io:2.11.0'
+
 }
 
 tasks.named('test') {
