--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,6 @@ out/
 
 ## application yaml
 /src/main/resources/application.yml
+/src/main/resources/application-local.yml
+/src/main/resources/application-prod.yml
 db_password.txt
