chore: jar task skip

--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,10 @@ bootJar{
 	archiveFileName = 'app.jar'
 }
 
+jar {
+	enabled = false
+}
+
 //querydsl 추가 시작
 def querydslDir = "$buildDir/generated/querydsl"
 querydsl {
