--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 	//querydsl 추가
 	id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
+	id 'org.jetbrains.kotlin.jvm' version '1.7.20'
 }
 
 group = 'whereQR'
@@ -56,10 +57,18 @@ dependencies {
 	//querydsl
 	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
 	annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}"
+
+	//properties
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+tasks.named('compileJava') {
+	inputs.files(tasks.named('processResources'))
 }
 
 bootJar{
@@ -88,6 +97,16 @@ configurations {
 		extendsFrom annotationProcessor
 	}
 	querydsl.extendsFrom compileClasspath
+}
+compileKotlin {
+	kotlinOptions {
+		jvmTarget = "1.8"
+	}
+}
+compileTestKotlin {
+	kotlinOptions {
+		jvmTarget = "1.8"
+	}
 }
 
 //querydsl 추가 끝
