fix : resolve cors error

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ networks:
 services:
 
   react-app:
-    image: tnfus916/whereqr-front:test
+    image: tnfus916/whereqr-front:ver1.0
     ports:
       - 3000:80
     networks:
@@ -15,7 +15,7 @@ services:
 
   app:
     container_name: backend
-    image: baeksujin/whereqr-backend:v2.3
+    image: baeksujin/whereqr-backend:v2.5
     user: root
     ports:
       - 8080:8080
