--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,9 @@ dependencies {
 	//base64
 	implementation 'commons-io:commons-io:2.11.0'
 
+	//GSON
+	implementation 'com.google.code.gson:gson:2.8.5'
+
 	//spring security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
