--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ plugins {
 
 group = 'whereQR'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = "16"
 
 configurations {
 	compileOnly {
@@ -108,3 +108,4 @@ configurations {
 
 
 //querydsl 추가 끝
+targetCompatibility = JavaVersion.VERSION_16
