--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -29,13 +29,36 @@ jobs:
         with:
           arguments: build
 
-      - name: Deploy to NCP
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        run: |
-          mkdir -p ~/.ssh
-          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
+#      - name: Deploy to NCP
+#        env:
+#          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+#        run: |
+#          mkdir -p ~/.ssh
+#          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+#          chmod 600 ~/.ssh/id_rsa
+#
+#          ssh-keyscan -p 12321 210.89.181.89 >> ~/.ssh/known_hosts
+#          ssh -i ~/.ssh/id_rsa -p 12321 root@210.89.181.89 'echo "Connected to NCP Server"'
 
-          ssh-keyscan -p 12321 210.89.181.89 >> ~/.ssh/known_hosts 
-          ssh -i ~/.ssh/id_rsa -p 12321 root@210.89.181.89 'echo "Connected to NCP Server"'
+      - name: Build Docker image
+        run: |
+          ./gradlew clean bootBuildImage -PDOCKERHUB_ID=${{ secrets.DOCKERHUB_ID }} -PDOCKERHUB_TOKEN=${{ secrets.DOCKERHUB_TOKEN }}
+          docker tag your_image_name:latest your_dockerhub_username/your_image_name:latest
+
+      - name: Push Docker image to Docker Hub
+        run: docker push your_dockerhub_username/your_image_name:latest
+
+      - name: SSH into EC2 instance and deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          password: ${{ secrets.EC2_PASSWORD }}
+          port: ${{ secrets.EC2_SSH_PORT }}
+          script: |
+            docker pull your_dockerhub_username/your_image_name:latest
+            docker ps -f name=be-server -q | xargs --no-run-if-empty docker container stop
+            docker ps -a -f name=be-server -q | xargs --no-run-if-empty docker container rm
+            docker run -d --name be-server -p 80:8080 \
+                -e GOOGLE_APPLICATION_CREDENTIALS="${HOME}/key.json" \
+                your_dockerhub_username/your_image_name:latest
