--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,29 +29,29 @@ jobs:
         with:
           arguments: build
 
-      - name: Deploy to NCP
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        run: |
-          mkdir -p ~/.ssh
-          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -p 12321 210.89.181.89 >> ~/.ssh/known_hosts
-          ssh -i ~/.ssh/id_rsa -p 12321 root@210.89.181.89 '
-            echo "Connected to NCP Server"
+#       - name: Deploy to NCP
+#         env:
+#           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+#         run: |
+#           mkdir -p ~/.ssh
+#           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+#           chmod 600 ~/.ssh/id_rsa
+#           ssh-keyscan -p 12321 210.89.181.89 >> ~/.ssh/known_hosts
+#           ssh -i ~/.ssh/id_rsa -p 12321 root@210.89.181.89 '
+#             echo "Connected to NCP Server"
 
-            # Docker 로그인 (Docker Hub)
-            echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+#             # Docker 로그인 (Docker Hub)
+#             echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
 
-            # Docker 이미지 Pull
-            docker pull where_qr/where_qr:latest
-#           your_dockerhub_username, your_image_name
+#             # Docker 이미지 Pull
+#             docker pull where_qr/where_qr:latest
+# #           your_dockerhub_username, your_image_name
 
-            # 이전에 실행 중이던 컨테이너 중지 및 제거
-            docker stop where_qr_container || true
-            docker rm where_qr_container || true
+#             # 이전에 실행 중이던 컨테이너 중지 및 제거
+#             docker stop where_qr_container || true
+#             docker rm where_qr_container || true
 
-            # 새로운 Docker 컨테이너 실행
-            docker run -d --name where_qr_container -p 80:8080 where_qr/where_qr:latest
-          '
+#             # 새로운 Docker 컨테이너 실행
+#             docker run -d --name where_qr_container -p 80:8080 where_qr/where_qr:latest
+#           '
           
