--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -37,4 +37,20 @@ jobs:
           echo "$SSH_PRIVATE_KEY" > ~/.ssh/server_key
           chmod 600 ~/.ssh/server_key
           ssh-keyscan -p 12321 210.89.181.89 >> ~/.ssh/known_hosts
-          ssh -i ~/.ssh/server_key -p 12321 root@210.89.181.89
+          ssh -i ~/.ssh/server_key -p 12321 root@210.89.181.89 '
+            echo "Connected to NCP Server"
+
+            # Docker 로그인 (Docker Hub)
+            echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+
+            # Docker 이미지 Pull
+            docker pull where_qr/where_qr:latest
+            
+            # 이전에 실행 중이던 컨테이너 중지 및 제거
+            docker stop where_qr_container || true
+            docker rm where_qr_container || true
+
+            # 새로운 Docker 컨테이너 실행
+            docker run -d --name where_qr_container -p 80:8080 where_qr/where_qr:latest
+          '
+          
