--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,11 +47,7 @@ jobs:
             echo "Connected to NCP Server"
             # 이미지 Pull 및 컨테이너 재시작
             docker pull whereqr/whereqr:latest
-            echo "Docker image pull: $?"
-            docker stop where_qr_container || true
-            echo "Docker container stop: $?"
-            docker rm where_qr_container || true
-            echo "Docker container removal: $?"
+            echo "Docker image pull: $?""
             docker stop backend || true
             docker compose up -d
           '
