--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,54 +1,41 @@
 name: Java CI with Gradle
-
 on:
   push:
-    branches: [ "dashboard" ]
+    branches: [ "develop", "master" ]
   pull_request:
-    branches: [ "dashboard" ]
-
+    branches: [ "develop", "master" ]
 permissions:
   contents: read
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-
       - name: Set up JDK 16
         uses: actions/setup-java@v3
         with:
           java-version: '16'
           distribution: 'temurin'
-
-      - name: Convert Gradle Wrapper to LF
-        run: sed -i 's/\r$//' gradlew
-        shell: bash
-
+          
       - name: Update Gradle Wrapper
         run: ./gradlew wrapper --gradle-version 8.0
-
-
       - name: Create resources directory
         run: mkdir -p src/main/resources
-
-      - name: Copy application.yml and application-dev.yml
+      - name: Copy application.yml and application-local.yml
         run: |
           touch ./src/main/resources/application.yml
-          touch ./src/main/resources/application-dev.yml
+          touch ./src/main/resources/application-local.yml
           echo "${{ secrets.APPLICATION_YML }}" > ./src/main/resources/application.yml
-          echo "${{ secrets.APPLICATION_DEV_YML }}" > ./src/main/resources/application-dev.yml
-
+          echo "${{ secrets.APPLICATION_LOCAL_YML }}" > ./src/main/resources/application-local.yml
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_PASSWORD }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-
       - name: Build and Push Docker image
         run: |
-          docker buildx build --platform linux/amd64 --push --tag whereqr/whereqr:latest -f Dockerfile2 .
+          docker buildx build --platform linux/amd64 --push --tag whereqr/whereqr-dev:latest -f Dockerfile2 .
+          
       - name: Deploy to NCP
+        if: github.ref == 'refs/heads/master'
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
@@ -58,17 +45,8 @@ jobs:
           ssh-keyscan -p 12321 210.89.181.89 >> ~/.ssh/known_hosts
           ssh -i ~/.ssh/server_key -p 12321 root@210.89.181.89 '
             echo "Connected to NCP Server"
-
             # 이미지 Pull 및 컨테이너 재시작
             docker pull whereqr/whereqr:latest
-            echo "Docker image pull: $?"
-            
-            docker stop where_qr_container || true
-            echo "Docker container stop: $?"
-            
-            docker rm where_qr_container || true
-            echo "Docker container removal: $?"
-            
-            docker run -d --name where_qr_container -p 8090:8090 whereqr/whereqr:latest
-            echo "Docker container run: $?"
+            docker stop backend || true
+            docker compose up -d
           '
