add : upload file

--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.11.238'
+
 }
 
 tasks.named('test') {
