--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
 	implementation 'com.amazonaws:aws-java-sdk-s3:1.11.238'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 }
 
