--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,7 @@ dependencies {
 
 	implementation 'com.amazonaws:aws-java-sdk-s3:1.11.238'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation "org.springframework.boot:spring-boot-starter-mail"
 
 }
 
